# kira-qc

./: .gitignore  Cargo.toml  PIPELINE.md  README.md
src/: main.rs
src/cli/: args.rs  run.rs
src/core/: engine.rs  fastq.rs  io.rs  mod.rs
src/core/metrics/: adapter_content.rs  basic.rs  duplication.rs  kmer_content.rs  length_dist.rs  mod.rs  overrepresented.rs  per_base_content.rs  per_base_n.rs  per_base_qual.rs  per_seq_gc.rs  per_seq_n.rs  per_seq_qual.rs
src/core/model/: mod.rs
src/report/: fastqc_txt.rs  html.rs  latex.rs  mod.rs  summary_txt.rs  zip.rs
src/simd/: aarch64_neon.rs  mod.rs  scalar.rs  x86_avx2.rs
