[package]
name = "kira-qc"
description = "FastQC-compatible QC tool written in Rust"
version = "0.1.1"
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/ARyaskov/kira-qc"
keywords = [
    "bioinformatics",
    "genomics",
    "quality-control",
    "dna",
    "fastq"
]
categories = [
    "science",
    "science::bioinformatics",
    "science::bioinformatics::sequence-analysis",
    "command-line-utilities",
    "algorithms"
]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
kira-fastq = "0.1.0"
zip = "7.2.0"
aho-corasick = "1"
svg2pdf = "0.13"

[features]
default = []
no-kmer = []
